--------------------------
Darshan Release Change Log
--------------------------

Darshan-3.1.6
=============
* bug fix for linker failures caused when linking external libraries
that use MPI internally (e.g., PETSc). Reported by Bilel Hadri.
* bug fix in mapping of Darshan's MPI_File_read_all wrapper to the
  underlying MPI library call in dynamic linking case

Darshan-3.1.5
=============
* modify Darshan MPI instrumentation method to intercept both MPI and
  PMPI symbols to workaround MPI implementations that are calling
  PMPI routines directly (e.g., the Fortran bindings of OpenMPI2).
  Contributed in part by Chris Zimmer.
* add a new python utility for analzying DXT trace files (dxt_analyzer).
  Contributed by Alex Sim.
* bug fix to disable Darshan module instrumentation after the
  Darshan shutdown procedure has began, an issue that was
  leading to negative timers in some cases
* bug fix for autoconf ignoring specified libbz2 location. Contributed
  by Glenn Lockwood.
* add regression tests harnesses for Cray systems at ALCF & NERSC
* add support for DARSHAN_EXCLUDE_DIRS environment variable to
  explicitly disable instrumentation for files in given
  directories. Contributed by Cristian Simarro.
* correct "undefined reference to `__wrap_H5get_libversion'" linker failure
  when compiling some HDF5 programs, reported by Jialin Liu
* bug fix in darshan-merge utility related to logs containing DXT trace
  data. Reported by Glenn Lockwood.

Darshan-3.1.4
=============
* bug fix to prevent darshan-parser segfault when parsing logs with
  DXT module data present. Reported by James Dickson.
* bug fixes to make the darshan-diff utility functional again.

Darshan-3.1.3
=============
* disable instrumentation for mmap when dynamically linking; this avoids a
  potential deadlock condition on Cray systems using dynamically linked
  executabes.  Reported by Cristian Simarro for dynamic linking case.

Darshan-3.1.3-pre1
=============