@@ -2,6 +2,12 @@
 Darshan Release Change Log
 --------------------------
 
+Darshan-3.1.7
+=============
+* bug fix for darshan-parser backwards compatibility: Darshan logs generated
+  by Darshan versions prior to 3.1.0 may have included stdio counters that
+  were not properly up-converted.  Reported by Teng Wang.
+
 Darshan-3.1.6
 =============
 * bug fix for linker failures caused when linking external libraries
